--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
         type: string
         default: ""
     docker:
-      - image: circleci/openjdk:21.0-jdk
+      - image: circleci/openjdk:21.0
     environment:
       _JAVA_OPTIONS: -Xmx3200m
       GRADLE_OPTS: -Dorg.gradle.daemon=false
