--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,10 @@ workflows:
   build-and-test:
     jobs:
       - run-gradle:
+          name: Build
           gradle_command: "build"
       - run-gradle:
+          name: Test
           gradle_command: "test"
 
 #  build-and-publish:
