DWM-1: Filter to run on main branch only.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,4 +48,8 @@ workflows:
 
   build-and-publish:
     jobs:
-      - update-version
+      - update-version:
+          filters:
+            branches:
+              only:
+                - main
