--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
-
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.4
 yarn_mappings=1.21.4+build.2
 loader_version=0.16.9
-
 # Mod Properties
 mod_version=1.0.0
 maven_group=com.adamkali.dwm
 archives_base_name=dwm
-
 # Dependencies
 fabric_version=0.112.2+1.21.4
+modmenu_version=13.0.2
+cloth_config_version=17.0.144
