DWM-85: Add sonic screwdriver advancement

--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,13 @@ publishing {
     }
 }
 
+fabricApi {
+    configureDataGeneration() {
+        client = true
+    }
+}
+
+
 test {
     useJUnitPlatform()
 }
