--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   aws-cli: circleci/aws-cli@5.1.2
-  github-cli: circleci/github-cli@2.7.0
+  gh: circleci/github-cli@2.7.0
 
 jobs:
   run-gradle:
@@ -54,7 +54,7 @@ jobs:
           command: |
             chmod +x ./gradlew
             ./gradlew build
-      - github-cli/release:
+      - gh/release:
           tag_name: "${BUILD_NAME}"
           release_name: "Release ${BUILD_NAME}"
           body: "Release notes for version << pipeline.git.tag >>"
