--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
     testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
+    testImplementation "org.mockito:mockito-core:5.11.0"
 
     implementation "org.json:json:20240303"
     implementation "com.github.erosb:everit-json-schema:1.14.4"
